# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

* baselayout-1.12.0_pre7 (31 Aug 2005)

  31 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    service status requests (either by /etc/init.d/foo status or rc-status)
    now update the service status by checking daemons and/or pidfiles to check
    if they are still running or not. To update the status in your own code,
    source "${svclib}/sh/rc-daemon.sh" and call
    update_service_status "${service}"

    Trimmed $Header$ from a few files

  30 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    iwconfig fixed for scanned ad-hoc networks
    we now prefer managed over ad-hoc when processing scan results
    
    iwconfig associate_test_quality now works. Fixes #103579 thanks to
    Harald Schioeberg

    iproute2 now understands ifconfig style netmask routes

    fixed IPv6 address problems in ifconfig and iproute2 modules

  25 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix typo in /sbin/rc - we should check if ${argv1} is in /etc/inittab, and
    not if 'default' is in there ...

    Add /sbin/evms_activate to populate_udev(), bug #50711.

  24 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    rc-daemon now handles --signal correct - fixes #103182

  23 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Sync our MAKEDEV with Debian's latest version. 

  19 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    dhcpcd now reports the correct needed version

    iwconfig and wpa_supplicant have better tests for wireless interface
    which fixes the "lan wlan" problem

* baselayout-1.12.0_pre6 (18 Aug 2005)

  18 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    RC_AUTO_INTERFACE defaults to NO - but we still default to DHCP
    
    consoletype is now cached. This has the benefit of being very slightly
    faster and you now get coloured text for parallel startup
    
    Parallel startup also does parallel shutdown as well
    