@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/sbin/runscript
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
